# feedback-prize-english-language-learning

./: .gitignore  README.md  deberta-v3.sh  debug.sh  download_data.py  gacha.sh  gacha2.sh  kojima.sh  kojima2.sh  kojima3.sh  pyproject.toml  setup.cfg  setup.py  summarize.sh  train.csv  upload_module.sh
FPELL/: __init__.py  lightgbm.py
FPELL/data/: __init__.py  io.py  io_with_cfg.py
FPELL/nn/: __init__.py  awp.py  datamodule.py  from_checkpoint.py  module.py  training.py
config/: deberta-large.yaml  deberta-v2-xlarge.yaml  deberta-v3-large.yaml  deberta-xlarge.yaml
data/: ELL_Rubrics.docx
data/feedback-prize-english-language-learning/: Untitled-1.ipynb
lightgbm/: init.sh  predict.py
meta/: monitor_submission_executing_time.py
nn/: _deberta-large-with-fixed-typo.yaml  _deberta-large-with-summary-for-cohesion.yaml  deberta-large.yaml  deberta-v2-xlarge.yaml  deberta-v3-large.yaml  deberta-xlarge-with-fixed-typo.yaml  deberta-xlarge-with-summary-for-cohesion.yaml  deberta-xlarge.yaml  ensemble.py  predict.py  predict_for_each.py  train.py  train_for_each.py  validate.py  validate_for_each.py
nn/from_predicted/: plot_confusion_matrix.py
nn_MOZATTT/: dataset.py  fgm-fb3-deberta-v3-base-train.py  helper_functions.py  model.py  poolings.py  predict.py  requirements.txt  validate_for_blending.py
nn_MOZATTT/config/: deberta-v3-base.toml
result_optuna/Gacha_17684/: config.yaml
src/: deberta-xlarge.yaml  predict.py  train.py  validate.py
src/from_predicted/: ensemble.py  plot_confusion_matrix.py
src/lightgbm/: predict.py
workspace/uchida/: main.py  (+5 more)
(+35 files in other folders)
