[tool.poetry]
name = "feedback3"
version = "0.1.0"
description = ""
authors = ["jumpei.uchida <jumpei.uchida@brainpad.co.jp>"]
readme = "README.md"
packages = [{include = "workspace"},{include = "FPELL"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
omegaconf = "^2.2.3"
pandas = "^1.5.1"
pytorch-lightning = "^1.8.0.post1"
scikit-learn = "^1.1.3"
sentencepiece = "^0.1.97"
torch = "^1.13.0"
transformers = "^4.24.0"
iterative-stratification = "^0.1.7"
text-unidecode = "^1.3"
wandb = "^0.13.5"
tqdm = "^4.64.1"
bitsandbytes = "^0.35.4"
mlflow = "^1.30.0"
hydra = "^2.5"
black = "^22.10.0"
isort = "^5.10.1"
kaggle = "^1.5.12"
summarizer = "^0.0.7"
bert-extractive-summarizer = "^0.10.1"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
